--- a/views/account/index.pug
+++ b/views/account/index.pug
@@ -2,50 +2,7 @@ extends ../layout/default
 
 block stylesheets
     link(rel='stylesheet', href='/libs/bootstrap-chosen/bootstrap-chosen.css')
-    link(rel='stylesheet', href='/stylesheets/data-table.css')
-block javascripts
-    script(src='/javascripts/select-option.js')
-    script(type='text/javascript', src='/libs/bootstrap-chosen/dist/chosen.jquery-1.4.2/chosen.jquery.min.js')
-    script(type='text/javascript').
-        //- document.addEventListener("DOMContentLoaded", function(event) {
-            let dataTable = new DataTable({
-                selector: '#table-accounts',
-                urlFilter: '/account/search',
-                pageSize: !{JSON.stringify(pageSize)},
-                total: !{JSON.stringify(total)},
-                //- columns: ['STT', 'firstName', 'lastName', 'userName', 'email'],
-                filters: [
-                    {
-                        name: 'fullName',
-                        type: 'text'
-                    },
-                    {
-                        name: 'email',
-                        type: 'text'
-                    },
-                    {
-                        name: 'statusDisplay',
-                        type: 'select',
-                        key: 'value',
-                        value: 'text',
-                        placeholder: 'Trạng thái',
-                        style: 'width:140px;',
-                        search: false,
-                        options: [
-                            {
-                                value: 1,
-                                text: 'Đã kích hoạt'
-                            },
-                            {
-                                value: 0,
-                                text: 'Chưa kích hoạt'
-                            }
-                        ]
-                    }
-                ]
-            })
-        //- });
-
+    link(rel='stylesheet', href='/libs/bootstrap-table/dist/bootstrap-table.min.css')
 
 block content
     // Content Header (Page header)
@@ -63,47 +20,174 @@ block content
     section.content
         .row
             .col-xs-12
-                a.btn.btn-success(href='/account/create') Tạo mới
-                hr
                 .box
-                    .box-header
-                        h3.box-title 
-                        .box-tools
-                            .input-group.input-group-sm(style='width: 150px;')
-                                input.form-control.pull-right(type='text', name='table_search', placeholder='Search')
-                                .input-group-btn
-                                    button.btn.btn-default(type='submit')
-                                        i.fa.fa-search
                     // /.box-header
                     .box-body.table-responsive.no-padding
-                        table#table-accounts.table.table-hover
-                            thead
-                                tr
-                                    th(name='STT') STT
-                                    th(name='fullName') Họ tên
-                                    th.text-center(name='avatar') Ảnh đại diện
-                                    th(name='userName') Tên đăng nhập
-                                    th(name='email') Email
-                                    th(name='statusDisplay') Trạng thái
-                                    th.text-center(name='actions', actions={view: '/account/view', edit: '/account/edit', delete: '/account/delete'}, style='width: 140px;') Hành động
-                            tbody
-                                each dt, i in data
-                                    tr
-                                        td #{i+1}
-                                        td #{dt.fullName}
-                                        td.text-center(style='font-size: 50px;')
-                                            if dt.avatar
-                                                img(src=dt.avatarUrl, style='width: 100px;')
-                                            else
-                                                i.fa.fa-user
-                                        td #{dt.userName}
-                                        td #{dt.email}
-                                        td #{dt.statusDisplay}
-                                        td.text-center
-                                            a.user-action.btn.btn-default(href='/account/view/' + dt._id)
-                                                em.fa.fa-eye
-                                            a.user-action.btn.btn-success(href='/account/edit/' + dt._id)
-                                                em.fa.fa-pencil
-                                            button.user-action.btn.btn-danger(onclick='return confirmDelete(this, "Bạn có chắc chắn muốn xóa tài khoản này không?", "/account/delete/' + dt._id + '")')
-                                                em.fa.fa-trash
+                        #toolbar
+                            a.btn.btn-success(href='/account/create') Tạo mới
+                            button#remove.btn.btn-danger(disabled='') Delete
+                        table#table(data-toolbar='#toolbar', data-search='true', data-show-refresh='false', data-show-toggle='false', data-show-columns='true', data-show-export='true', data-detail-view='true', data-detail-formatter='detailFormatter', data-minimum-count-columns='2', data-show-pagination-switch='false', data-pagination='true', data-id-field='id', data-page-list='[10, 25, 50, 100, ALL]', data-side-pagination='server', data-url='http://issues.wenzhixin.net.cn/examples/bootstrap_table/data', data-response-handler='responseHandler')
+
+block javascripts
+    script(type='text/javascript', src='/libs/bootstrap-table/dist/bootstrap-table.min.js')
+    script(type='text/javascript', src='/libs/x-editable/dist/bootstrap3-editable/js/bootstrap-editable.min.js')
+    script(type='text/javascript', src='/libs/bootstrap-table/dist/extensions/editable/bootstrap-table-editable.min.js')
+    script(type='text/javascript', src='/libs/bootstrap-table/dist/extensions/export/bootstrap-table-export.min.js')
+    script(type='text/javascript', src='/libs/bootstrap-chosen/dist/chosen.jquery-1.4.2/chosen.jquery.min.js')
+    script(src='/javascripts/tableExport.js')
+    script(src='/javascripts/select-option.js')
+    script.
+        const $table = $('#table');
+        const $remove = $('#remove');
+        let selections = [];
+        function initTable() {
+        $table.bootstrapTable({
+        height: getHeight(),
+        columns: [
+        [
+        {
+        field: 'state',
+        checkbox: true,
+        rowspan: 2,
+        align: 'center',
+        valign: 'middle'
+        }, {
+        title: 'Item ID',
+        field: 'id',
+        rowspan: 2,
+        align: 'center',
+        valign: 'middle',
+        sortable: true
+        }, {
+        title: 'Item Detail',
+        colspan: 3,
+        align: 'center'
+        }
+        ],
+        [
+        {
+        field: 'name',
+        title: 'Item Name',
+        sortable: true,
+        editable: true,
+        align: 'center'
+        }, {
+        field: 'price',
+        title: 'Item Price',
+        sortable: true,
+        align: 'center',
+        editable: {
+        type: 'text',
+        title: 'Item Price',
+        validate(value) {
+        value = $.trim(value);
+        if (!value) {
+        return 'This field is required';
+        }
+        if (!/^\\$/.test(value)) {
+        return 'This field needs to start width $.'
+        }
+        const data = $table.bootstrapTable('getData');
+        const index = $(this).parents('tr').data('index');
+        console.log(data[index]);
+        return '';
+        }
+        },
+        footerFormatter: totalPriceFormatter
+        }, {
+        field: 'operate',
+        title: 'Item Operate',
+        align: 'center',
+        events: operateEvents,
+        formatter: operateFormatter
+        }
+        ]
+        ]
+        });
+        // sometimes footer render error.
+        setTimeout(() => {
+        $table.bootstrapTable('resetView');
+        }, 200);
+        $table.on('check.bs.table uncheck.bs.table ' +
+        'check-all.bs.table uncheck-all.bs.table', () => {
+        $remove.prop('disabled', !$table.bootstrapTable('getSelections').length);
+        // save your data, here just save the current page
+        selections = getIdSelections();
+        // push or splice the selections if you want to save all data selections
+        });
+        $table.on('expand-row.bs.table', (e, index, row, $detail) => {
+        if (index % 2 == 1) {
+        $detail.html('Loading from ajax request...');
+        $.get('LICENSE', res => {
+        $detail.html(res.replace(/\\n/g, '<br>'));
+        });
+        }
+        });
+        $table.on('all.bs.table', (e, name, args) => {
+        console.log(name, args);
+        });
+        $remove.click(() => {
+        const ids = getIdSelections();
+        $table.bootstrapTable('remove', {
+        field: 'id',
+        values: ids
+        });
+        $remove.prop('disabled', true);
+        });
+        $(window).resize(() => {
+        $table.bootstrapTable('resetView', {
+        height: getHeight()
+        });
+        });
+        }
+        function getIdSelections() {
+        return $.map($table.bootstrapTable('getSelections'), ({id}) => id);
+        }
+        function responseHandler(res) {
+        $.each(res.rows, (i, row) => {
+        row.state = $.inArray(row.id, selections) !== -1;
+        });
+        return res;
+        }
+        function detailFormatter(index, row) {
+        const html = [];
+        $.each(row, (key, value) => {
+        html.push(`<p><b>${key}:</b> ${value}</p>`);
+        });
+        return html.join('');
+        }
+        function operateFormatter(value, row, index) {
+        return [
+        '<a class="like" href="javascript:void(0)" title="Like">',
+        '<i class="glyphicon glyphicon-heart"></i>',
+        '</a>  ',
+        '<a class="remove" href="javascript:void(0)" title="Remove">',
+        '<i class="glyphicon glyphicon-remove"></i>',
+        '</a>'
+        ].join('');
+        }
+        window.operateEvents = {
+        'click .like': function (e, value, row, index) {
+        alert(`You click like action, row: ${JSON.stringify(row)}`);
+        },
+        'click .remove': function(e, value, {id}, index) {
+        $table.bootstrapTable('remove', {
+        field: 'id',
+        values: [id]
+        });
+        }
+        };
+        function totalPriceFormatter(data) {
+        let total = 0;
+        $.each(data, (i, {price}) => {
+        total += +(price.substring(1));
+        });
+        return `$${total}`;
+        }
+        function getHeight() {
+        return $(window).height() - $('h1').outerHeight(true);
+        }
+        $(() => {
+        initTable();
+        })
 
