--- a/views/account/index.pug
+++ b/views/account/index.pug
@@ -26,7 +26,7 @@ block content
                         #toolbar
                             a.btn.btn-success(href='/account/create') Tạo mới
                             button#remove.btn.btn-danger(disabled='') Delete
-                        table#table(data-toolbar='#toolbar', data-search='true', data-show-refresh='false', data-show-toggle='false', data-show-columns='true', data-show-export='true', data-detail-view='true', data-detail-formatter='detailFormatter', data-minimum-count-columns='2', data-show-pagination-switch='false', data-pagination='true', data-id-field='id', data-page-list='[10, 25, 50, 100, ALL]', data-side-pagination='server', data-url='http://issues.wenzhixin.net.cn/examples/bootstrap_table/data', data-response-handler='responseHandler')
+                        table#table(data-toolbar='#toolbar', data-search='true', data-show-refresh='false', data-show-toggle='false', data-show-columns='true', data-show-export='true', data-detail-view='true', data-detail-formatter='detailFormatter', data-minimum-count-columns='2', data-show-pagination-switch='false', data-pagination='true', data-id-field='id', data-page-size='15', data-page-list='[15, 25, 50, 100, ALL]', data-side-pagination='server', data-url='http://issues.wenzhixin.net.cn/examples/bootstrap_table/data', data-response-handler='responseHandler')
 
 block javascripts
     script(type='text/javascript', src='/libs/bootstrap-table/dist/bootstrap-table.min.js')
