--- a/views/account/index.pug
+++ b/views/account/index.pug
@@ -160,7 +160,7 @@ block javascripts
             console.log('indexttt', index);
             let html = '';
             html += '<a class="avatar" href="#" target="_blank" title="' + row.fullName + '">';
-            html += '<img class="img img-responsive" src="' + row.avatarUrl + '" style="width: 100px; height: 80px; margin: auto" />';
+            html += '<img class="img img-responsive" src="' + row.avatarUrl + '" style="width: 50px; height: 50px; margin: auto" />';
             html += '</a>';
             return html;
         }
@@ -184,12 +184,14 @@ block javascripts
         }
         function operateFormatter(value, row, index) {
             let html = '';
-            html += '<a class="view" href="/account/view/' + row._id + '" target="_blank" title="View">';
+            html += '<a class="user-action view" href="/account/view/' + row._id + '" target="_blank" title="View">';
             html += '<i class="fa fa-eye"></i>';
             html += '</a>';
-            html += '<span>&nbsp;&nbsp;</span>'
-            html += '<a class="edit" href="/account/edit/' + row._id + '" target="_blank" title="Edit">';
+            html += '<a class="user-action edit" href="/account/edit/' + row._id + '" title="Edit">';
             html += '<i class="fa fa-edit"></i>';
+            html += '</a>';
+            html += '<a class="user-action r&p" href="/account/edit-role-permission/' + row._id + '" title="Role and Permission">';
+            html += '<i class="fa fa-shield"></i>';
             html += '</a>';
             return html;
         }
